--- a/examples/megatron/configs/MI300X/deepseek_v2_lite-FP8-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/deepseek_v2_lite-FP8-pretrain.yaml
@@ -94,4 +94,4 @@ modules:
 
       # enable fp8 training
       fp8: hybrid
-      moe_use_legacy_grouped_gemm: false
+      moe_use_legacy_grouped_gemm: true
