--- a/examples/megatron/configs/MI300X/gpt_oss_20B-BF16-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/gpt_oss_20B-BF16-pretrain.yaml
@@ -21,7 +21,7 @@ modules:
       log_avg_reset_interval: 50
 
       # profile
-      profile: true
+      profile: false
       use_pytorch_profiler: true
       profile_step_end: 7
       profile_step_start: 6
@@ -58,7 +58,7 @@ modules:
       valid_data_path: null
       test_data_path: null
 
-      moe_use_legacy_grouped_gemm: false
+      moe_use_legacy_grouped_gemm: true
       # MLA
       multi_latent_attention: false
       # rope fusion
@@ -98,3 +98,5 @@ modules:
       # Cross entropy flags
       # cross_entropy_fusion_impl: "te"
       # cross_entropy_loss_fusion: true
+      moe_shared_expert_overlap: false
+      moe_router_dtype: "fp32"
