--- a/runner/.primus.yaml
+++ b/runner/.primus.yaml
@@ -31,8 +31,8 @@ container:
     # Single-value options
     ipc: "host"
     network: "host"
-    cpus: "32"
-    memory: "256G"
+    # cpus: "96"
+    # memory: "256G"
     name: "primus-training"
     privileged: "true"
     security-opt: "seccomp=unconfined"
