Post-Training Framework(Megatron-Bridge) Support (#500)
## Overview
Add support for Megatron-Bridge post-training with automatic framework
detection and dependency management.

## Usage

```bash
./runner/primus-cli container \
--image rocm/primus:v25.10 \
-- --env HF_TOKEN=$HF_TOKEN \
train posttrain --config ./examples/megatron_bridge/configs/MI355X/qwen3_32B_lora_posttrain.yaml
```

## Key Features
- Automatic framework detection from config (`post_trainer.framework`)
- Framework-specific hooks organized in subdirectories
- Multi-rank checkpoint conversion with synchronization
- Automatic dependency installation

<img width="875" height="740" alt="image"
src="https://github.com/user-attachments/assets/2befe93e-7d89-4018-bda9-bd0bb67ad4eb"
/>

---------

Co-authored-by: xiaompen <xiaompen@smci355-ccs-aus-n13-13.cs-aus.dcgpu>

--- a/runner/.primus.yaml
+++ b/runner/.primus.yaml
@@ -31,8 +31,8 @@ container:
     # Single-value options
     ipc: "host"
     network: "host"
-    cpus: "32"
-    memory: "256G"
+    # cpus: "96"
+    # memory: "256G"
     name: "primus-training"
     privileged: "true"
     security-opt: "seccomp=unconfined"
@@ -47,7 +47,7 @@ container:
     device:
       - "/dev/kfd"
       - "/dev/dri"
-      - "/dev/infiniband"
+      # - "/dev/infiniband"
 
     # Linux capabilities (each passed as --cap-add)
     # NOTE: Do not modify these capabilities - they are required for proper container operation
