--- a/examples/megatron/configs/MI300X/zebra_llama_1B-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/zebra_llama_1B-pretrain.yaml
@@ -1,6 +1,6 @@
 work_group: ${PRIMUS_TEAM:amd}
 user_name: ${PRIMUS_USER:root}
-exp_name: ${PRIMUS_EXP_NAME:mamba_hybrid_2.8B-pretrain}
+exp_name: ${PRIMUS_EXP_NAME:zebra_llama_1B-pretrain}
 workspace: ${PRIMUS_WORKSPACE:./output}
 
 modules:
@@ -9,10 +9,10 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: mamba_hybrid_2.8B.yaml
+    model: zebra_llama_1B.yaml
     overrides:
       # log
-      wandb_project: "Primus_Mamba_Hybrid_Pretrain"
+      wandb_project: "Primus_Zebra_Llama_1B_Pretrain"
       stderr_sink_level: DEBUG
 
       eval_iters: 0
@@ -36,26 +36,17 @@ modules:
       adam_beta1: 0.9
       adam_beta2: 0.95
       eod_mask_loss: true
-      init_method_std: 0.02
-      norm_epsilon: 1.0e-5
 
       # Mamba-specific: must provide spec
-      spec: ['megatron.core.models.mamba.mamba_layer_specs', 'mamba_stack_spec']
+      # Use custom hybrid Mamba+MLA spec
+      spec: ['primus.backends.megatron.core.models.hybrid.hybrid_mamba_mla_layer_specs', 'hybrid_stack_spec']
       
       # Tokenizer
       tokenizer_type: HuggingFaceTokenizer
       tokenizer_model: meta-llama/Llama-3.2-1B
       
-      # Hybrid Mamba+Attention parameters
-      is_hybrid_model: true
-      hybrid_attention_ratio: 0.125
-      hybrid_mlp_ratio: 0.0
-      mamba_state_dim: 16
-      mamba_head_dim: 64
-      mamba_num_groups: 8
-
       # parallel
-      tensor_model_parallel_size: 2
+      tensor_model_parallel_size: 1
       pipeline_model_parallel_size: 1
       expert_model_parallel_size: 1
       overlap_grad_reduce: true
@@ -76,9 +67,4 @@ modules:
       save_interval: 10000
       disable_last_saving: true
       ckpt_format: torch
-
-      # Turbo - disable for Mamba layers, but attention layers may benefit
-      enable_primus_turbo: false
-      use_turbo_attention: false
-      use_turbo_grouped_mlp: false
 
