--- a/primus/configs/modules/megatron/primus_pipeline.yaml
+++ b/primus/configs/modules/megatron/primus_pipeline.yaml
@@ -5,3 +5,7 @@ pp_algorithm: "1f1b-interleaved" # "1f1b", "1f1b-interleaved", "zero-bubble", "z
 communication_method: "async_p2p" # "async_p2p", "batch_p2p"
 
 debug_scheduler_table: false
+
+offload: false
+
+offload_ops: "" # attn |(Not support yet) basic_gemm, row_parallel_gemm, column_parallel_gemm, grouped_linear
