--- a/examples/megatron_bridge/configs/MI355X/qwen3_32b_sft_posttrain.yaml
+++ b/examples/megatron_bridge/configs/MI355X/qwen3_32b_sft_posttrain.yaml
@@ -53,3 +53,19 @@ modules:
       recompute_granularity: full
       recompute_method: uniform
       recompute_num_layers: 1
+
+      # Dataset configuration (defaults to squad if not specified)
+      # To use a custom dataset, uncomment and configure:
+      # dataset:
+      #   _target_: megatron.bridge.data.builders.hf_dataset.HFDatasetConfig
+      #   dataset_name: "squad"  # or your HuggingFace dataset
+      #   seq_length: 2048
+      #   seed: 5678
+      #   # ... other dataset parameters
+      #
+      # To use mock data for testing:
+      # dataset:
+      #   _target_: megatron.bridge.data.datasets.mock_dataset.MockDatasetConfig
+      #   seq_length: 2048
+      #   vocab_size: 152064  # Qwen3 vocab size
+      #   num_train_samples: 50000
