--- a/examples/megatron_bridge/configs/MI355X/qwen3_32b_sft_posttrain.yaml
+++ b/examples/megatron_bridge/configs/MI355X/qwen3_32b_sft_posttrain.yaml
@@ -55,10 +55,11 @@ modules:
       recompute_num_layers: 1
 
       # Dataset configuration (defaults to squad if not specified)
+      # NOTE: HuggingFace recently reorganized datasets. Use "rajpurkar/squad" instead of "squad"
       # To use a custom dataset, uncomment and configure:
       # dataset:
       #   _target_: megatron.bridge.data.builders.hf_dataset.HFDatasetConfig
-      #   dataset_name: "squad"  # or your HuggingFace dataset
+      #   dataset_name: "rajpurkar/squad"  # Updated dataset path (was "squad")
       #   seq_length: 2048
       #   seed: 5678
       #   # ... other dataset parameters
