--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -10,7 +10,7 @@ env:
   BENCHMARK_ROOT_DIR: /wekafs/primus/benchmark
 
 jobs:
-  run-benchmark-torch:
+  run-benchmark-torch-part1:
     env:
       PRIMUS_WORKDIR: /wekafs/primus-data/primus_safe_ci/torch
       GPU_NAME: MI325  # Change this to your GPU model
@@ -214,7 +214,76 @@ jobs:
         run: |
           ./runner/primus-cli direct --log_file "${BENCHMARK_LOG_DIR}/megatron/gpt_oss_20B-FP8.log" \
           -- train pretrain --config examples/megatron/configs/MI300X/gpt_oss_20B-FP8-pretrain.yaml
+      - name: Clean
+        run: |
+          rm -rf ${PRIMUS_WORKDIR}/Primus-Turbo
+          rm -rf ${PRIMUS_WORKDIR}/Primus
 
+  run-benchmark-torch-part2:
+    env:
+      PRIMUS_WORKDIR: /wekafs/primus-data/primus_safe_ci/torch
+      GPU_NAME: MI325  # Change this to your GPU model
+      DATA_PATH: /wekafs/primus-data
+      HSA_NO_SCRATCH_RECLAIM: 1
+      HF_TOKEN: ${{secrets.HF_TOKEN}}
+    needs: run-benchmark-torch-part1
+    runs-on: [primus-lm-bench-torch-wkhbx]
+    steps:
+      - run: echo "🎉 Begin Primus-Turbo Checkout."
+      - name: Set commit hash to env
+        run: echo "PRIMUS_TURBO_COMMIT=${PRIMUS_TURBO_COMMIT}" >> $GITHUB_ENV
+      - name: Checkout Repo Primus-Turbo
+        uses: actions/checkout@v4
+        with:
+          repository: AMD-AIG-AIMA/Primus-Turbo
+          submodules: "recursive"
+          path: Primus-Turbo
+          ref: ${{ env.PRIMUS_TURBO_COMMIT }}
+      - run: echo "Begin Primus-Turbo Install."
+      - name: Install Primus-Turbo
+        run: |
+          mv Primus-Turbo /tmp/
+          echo "Primus-Turbo dir: /tmp/Primus-Turbo"
+          git config --global --add safe.directory /tmp/Primus-Turbo
+          cd /tmp/Primus-Turbo
+          start_time=$(date +%s)
+          echo "✅ [Pip install requirements] started at: $(date)"
+          mkdir -p ${PRIMUS_WORKDIR}/primus-cache
+          MAX_JOBS=128 pip install --cache-dir=${PRIMUS_WORKDIR}/primus-cache --no-build-isolation --no-clean -r requirements.txt
+          end_time=$(date +%s)
+          elapsed=$((end_time - start_time))
+          echo "✅ [Pip install requirements] ended at: $(date)"
+          echo "⏱️ [Pip install requirements] Total elapsed time: ${elapsed} seconds"
+          start_time=$(date +%s)
+          echo "✅ [build primus-turbo] started at: $(date)"
+          pip3 install --no-build-isolation -e . -v
+          end_time=$(date +%s)
+          elapsed=$((end_time - start_time))
+          echo "✅ [build primus-turbo] ended at: $(date)"
+          echo "⏱️ [build primus-turbo] Total elapsed time: ${elapsed} seconds"
+      - run: echo "🎉 Begin Primus Benchmark."
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - name: Show Environment Info
+        run: |
+          echo "Hostname: $(hostname)"
+          echo "PWD: $(pwd)"
+          echo "HOME: $HOME"
+          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
+          echo "Runner Temp Dir: $RUNNER_TEMP"
+          echo "Runner Tool Cache: $RUNNER_TOOL_CACHE"
+      - name: Install Primus
+        run: |
+          pip install -r requirements.txt
+      - name: Set BENCHMARK_PATH
+        run: |
+          BENCHMARK_DATE=$(date +%Y%m%d)
+          BENCHMARK_DATE_DIR="${BENCHMARK_ROOT_DIR}/${BENCHMARK_DATE}"
+          BENCHMARK_LOG_DIR="${BENCHMARK_DATE_DIR}/${GPU_NAME}"
+          mkdir -p "${BENCHMARK_LOG_DIR}"
+          echo "BENCHMARK_DATE_DIR=${BENCHMARK_DATE_DIR}" >> $GITHUB_ENV
+          echo "BENCHMARK_LOG_DIR=${BENCHMARK_LOG_DIR}" >> $GITHUB_ENV
       - name: "[21/33][Megatron] llama3_70B-BF16"
         timeout-minutes: 60
         continue-on-error: true
