enable FP8 for DeepSeek v3 16B and fix Llama3.1 70B model path
- Enable turbo_float8_linear and moe_fp8 for DeepSeek v3 16B on MI300X

- Switch to non-classic attention for better performance

- Fix Llama3.1 70B model path from 8B to 70B

--- a/examples/torchtitan/configs/MI355X/deepseek_v3_16b-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/MI355X/deepseek_v3_16b-FP8-pretrain.yaml
@@ -10,7 +10,7 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: deepseek_v3_16b.yaml
+    model: deepseek_v3_16b-fp8.yaml
     overrides:
       profiling:
         enable_profiling: false
