--- a/examples/torchtitan/configs/MI300X/deepseek_v3_16b-FP8-pretrain.yaml
+++ b/examples/torchtitan/configs/MI300X/deepseek_v3_16b-FP8-pretrain.yaml
@@ -10,7 +10,7 @@ modules:
     config: pre_trainer.yaml
 
     # model to run
-    model: deepseek_v3_16b.yaml
+    model: deepseek_v3_16b-fp8.yaml
     overrides:
       profiling:
         enable_profiling: false
@@ -75,11 +75,11 @@ modules:
       primus_turbo:
         enable_primus_turbo: true
         use_turbo_mx_linear: false
-        use_turbo_float8_linear: false
+        use_turbo_float8_linear: true
         enable_attention_float8: false
         use_turbo_grouped_mm: true
-        use_moe_fp8: false
-        use_classic_attention: true
+        use_moe_fp8: true
+        use_classic_attention: false
 
       # quantize:
       #   linear:
