refactor: rename post_trainer.yaml to sft_trainer.yaml
- Rename megatron_bridge config from post_trainer.yaml to sft_trainer.yaml
- Update all example configs to reference new filename
- Clean up adapter docstrings

--- a/examples/megatron_bridge/configs/MI355X/qwen3_8b_lora_posttrain.yaml
+++ b/examples/megatron_bridge/configs/MI355X/qwen3_8b_lora_posttrain.yaml
@@ -6,7 +6,7 @@ workspace: ${PRIMUS_WORKSPACE:./output}
 modules:
   post_trainer:
     framework: megatron_bridge
-    config: post_trainer.yaml
+    config: sft_trainer.yaml
 
     # Model to run
     model: qwen3_8b.yaml
