refactor: Extract forward_step to separate module and fix None iterator issue
- Create new sft_forward_step.py module with create_sft_forward_step() factory function
- Extract forward_step implementation from megatron_sft_trainer.py for better modularity
- Add None check for data_iterator to handle evaluation without validation dataset
- Add comprehensive documentation and type hints
- Improve code organization and maintainability

--- a/examples/megatron/configs/MI355X/llama3_8B-BF16-sft.yaml
+++ b/examples/megatron/configs/MI355X/llama3_8B-BF16-sft.yaml
@@ -4,7 +4,7 @@ exp_name: ${PRIMUS_EXP_NAME:llama3_8B-sft}
 workspace: ${PRIMUS_WORKSPACE:./output}
 
 modules:
-  sft_trainer:
+  post_trainer:
     framework: megatron
     config: sft_trainer.yaml
     
