feat(megatron-bridge): enable DEBUG logging for MI355X configs
Add stderr_sink_level: DEBUG to all MI355X post-training configs for better debugging:
- llama31_70b_lora_posttrain.yaml
- llama31_70b_sft_posttrain.yaml
- qwen3_32b_lora_posttrain.yaml
- qwen3_32b_sft_posttrain.yaml
- qwen3_8b_lora_posttrain.yaml
- qwen3_8b_sft_posttrain.yaml

--- a/examples/megatron_bridge/configs/MI355X/llama31_70b_lora_posttrain.yaml
+++ b/examples/megatron_bridge/configs/MI355X/llama31_70b_lora_posttrain.yaml
@@ -12,6 +12,8 @@ modules:
     model: llama31_70b.yaml
 
     overrides:
+      stderr_sink_level: DEBUG
+
       # Parallelism configuration
       tensor_model_parallel_size: 8
       pipeline_model_parallel_size: 1
