--- a/examples/megatron_bridge/configs/MI355X/llama31_70b_sft_posttrain.yaml
+++ b/examples/megatron_bridge/configs/MI355X/llama31_70b_sft_posttrain.yaml
@@ -12,6 +12,8 @@ modules:
     model: llama31_70b.yaml
 
     overrides:
+      stderr_sink_level: DEBUG
+
       # Parallelism configuration (adjusted for 8 GPUs)
       tensor_model_parallel_size: 8
       pipeline_model_parallel_size: 1
