--- a/primus/configs/modules/megatron/sft_trainer.yaml
+++ b/primus/configs/modules/megatron/sft_trainer.yaml
@@ -65,19 +65,19 @@ sft_dataset_name: "tatsu-lab/alpaca"
 sft_conversation_format: "alpaca"
 
 # LoRA (Low-Rank Adaptation) settings
-# Set lora_enabled: true to use LoRA for parameter-efficient fine-tuning
-lora_enabled: false
-lora_rank: 32                    # Low-rank dimension (8-64 typical)
-lora_alpha: 32                   # Scaling factor (usually = rank)
-lora_dropout: 0.0                # Dropout rate (0.0-0.1)
-lora_dropout_position: pre       # Dropout position: "pre" or "post"
-lora_A_init_method: xavier       # Matrix A init: "xavier" or "kaiming"
-lora_B_init_method: zero         # Matrix B init: "zero" (standard)
-lora_target_modules:             # Modules to apply LoRA
-  - linear_qkv
-  - linear_proj
-  - linear_fc1
-  - linear_fc2
+lora:
+  enabled: false                   # Set true for parameter-efficient fine-tuning
+  dim: 32                          # Low-rank dimension (8-64 typical)
+  alpha: 32                        # Scaling factor (usually = dim)
+  dropout: 0.0                     # Dropout rate (0.0-0.1)
+  dropout_position: pre            # "pre" or "post"
+  lora_A_init_method: xavier       # "xavier" or "kaiming"
+  lora_B_init_method: zero         # "zero" (standard)
+  target_modules:                  # Modules to apply LoRA
+    - linear_qkv
+    - linear_proj
+    - linear_fc1
+    - linear_fc2
 
 ckpt_format: torch_dist
 fully_parallel_save: true
