--- a/examples/megatron/configs/MI300X/mamba_370M-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/mamba_370M-pretrain.yaml
@@ -22,31 +22,30 @@ modules:
       log_avg_skip_iterations: 2
       log_avg_reset_interval: 50
 
-      train_iters: 50
-      micro_batch_size: 4
-      global_batch_size: 256
+      train_iters: 100000
+      micro_batch_size: 16
+      global_batch_size: 128
 
       seq_length: 2048
       max_position_embeddings: 2048
+      original_max_position_embeddings: 2048
 
-      lr: 3.0e-4
-      min_lr: 0.0
-      lr_warmup_iters: 50000
-      lr_decay_iters: 73192188
+      lr: 1.0e-4
+      min_lr: 1.0e-5
+      lr_warmup_iters: 3000
+      lr_decay_iters: 77000
       lr_decay_style: cosine
       weight_decay: 0.1
       adam_beta1: 0.9
       adam_beta2: 0.95
       eod_mask_loss: true
-      init_method_std: 0.02
-      norm_epsilon: 1.0e-5
 
       # Mamba-specific: must provide spec
       spec: ['megatron.core.models.mamba.mamba_layer_specs', 'mamba_stack_spec']
       
       # Tokenizer
       tokenizer_type: HuggingFaceTokenizer
-      tokenizer_model: EleutherAI/gpt-neox-20b
+      tokenizer_model: meta-llama/Llama-3.2-1B
 
       # parallel
       tensor_model_parallel_size: 1
@@ -57,8 +56,12 @@ modules:
       gradient_accumulation_fusion: false
 
       # data
-      mock_data: true
-      train_data_path: null
+      mock_data: false
+      train_data_path: 
+      - /vfs/silo/mingyyan/home_backup/Primus/data/fineweb-edu-100BT/HuggingFaceTokenizer/fineweb_edu_100BT_0_text_sentence
+      - /vfs/silo/mingyyan/home_backup/Primus/data/fineweb-edu-100BT/HuggingFaceTokenizer/fineweb_edu_100BT_1_text_sentence
+      - /vfs/silo/mingyyan/home_backup/Primus/data/fineweb-edu-100BT/HuggingFaceTokenizer/fineweb_edu_100BT_2_text_sentence
+      - /vfs/silo/mingyyan/home_backup/Primus/data/fineweb-edu-100BT/HuggingFaceTokenizer/fineweb_edu_100BT_3_text_sentence
       valid_data_path: null
       test_data_path: null
 
@@ -66,13 +69,9 @@ modules:
       finetune: false
       auto_continue_train: false
       load: null
-      no_load_optim: null
-      no_load_rng: null
-      save: null
-      save_interval: 20000
-      no_save_optim: null
-      no_save_rng: null
-      disable_last_saving: true
+      save: /vfs/silo/mingyyan/home_backup/Primus/output/mamba_370M-pretrain
+      save_interval: 5000
+      disable_last_saving: false
       ckpt_format: torch
 
       # Turbo - may need to disable for Mamba if not supported
