--- a/examples/megatron/configs/MI300X/zebra_llama_3B-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/zebra_llama_3B-pretrain.yaml
@@ -22,10 +22,11 @@ modules:
 
       train_iters: 100
       micro_batch_size: 2
-      global_batch_size: 128
+      global_batch_size: 16
 
-      seq_length: 4096
-      max_position_embeddings: 4096
+      seq_length: 8192
+      max_position_embeddings: 8192
+      original_max_position_embeddings: 8192
 
       lr: 2.0e-4
       min_lr: 2.0e-5
@@ -43,7 +44,7 @@ modules:
       
       # Tokenizer
       tokenizer_type: HuggingFaceTokenizer
-      tokenizer_model: meta-llama/Llama-3.2-1B
+      tokenizer_model: meta-llama/Llama-3.2-3B
       
       # parallel
       tensor_model_parallel_size: 1
