--- a/primus/configs/models/megatron/zebra_llama_3B.yaml
+++ b/primus/configs/models/megatron/zebra_llama_3B.yaml
@@ -10,6 +10,7 @@ tokenizer_model: meta-llama/Llama-3.2-1B
 num_layers: 56
 hidden_size: 3072
 ffn_hidden_size: 8192 
+normalization: "RMSNorm"
 
 # Mamba parameters
 is_hybrid_model: true
@@ -39,4 +40,4 @@ rotary_base: 500000
 position_embedding_type: none
 add_position_embedding: true
 use_rotary_position_embeddings: false
-max_position_embeddings: 131072
+original_max_position_embeddings: 131072
