fix(docker): add libionic-dev for amd-anp ionic support
Add libionic-dev package to resolve missing header files issue when amd-anp detects ionic environment and attempts to use it.

--- a/.github/workflows/docker/Dockerfile.ainic
+++ b/.github/workflows/docker/Dockerfile.ainic
@@ -54,7 +54,8 @@ ENV RCCL_HOME=${WORKDIR}/rccl
 # Build AMD ANP
 # ---------------------------------------------------------------------------
 
-RUN cd ${WORKDIR} && git clone https://github.com/rocm/amd-anp.git && \
+RUN apt-get install -y --allow-unauthenticated libionic-dev && \
+    cd ${WORKDIR} && git clone https://github.com/rocm/amd-anp.git && \
     cd amd-anp && git checkout tags/v1.3.0 && \
     make -j 16 RCCL_HOME=${RCCL_HOME} \
                 MPI_INCLUDE=${MPI_PATH}/include/ \
